--- a/package.json
+++ b/package.json
@@ -25,11 +25,12 @@
     "rollup": "^2.32.1",
     "rollup-plugin-babel": "^4.4.0",
     "tslib": "^2.0.3",
-    "typescript": "^4.0.3"
+    "typescript": "^4.0.3",
+    "jest": "^26.0.1"
   },
   "dependencies": {
     "remarkable": "^2.0.1",
-    "pretty-remarkable": "^1.0.0"
+    "markdown-utils": "^1.0.0"
   },
   "keywords": [
     "obsidian-md",
