Refactor https://github.com/cristianvasquez/obsidian-prettify/projects/1#card-49299678
Fixed https://github.com/cristianvasquez/obsidian-prettify/issues/1

--- a/manifest.json
+++ b/manifest.json
@@ -1,8 +1,8 @@
 {
   "id": "markdown-prettifier",
   "name": "Markdown prettifier",
-  "description": "Uses pretty-remarkable to fix and reformat ugly Markdown.",
+  "description": "Uses remark-gfm to fix and reformat ugly Markdown.",
   "isDesktopOnly": false,
   "js": "main.js",
-  "version": "0.0.1"
+  "version": "0.0.2"
 }
