--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "bugs": {
     "url": "https://github.com/cristianvasquez/obsidian-prettify/issues"
   },
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "Prettifies your markdown!",
   "main": "index.js",
   "scripts": {
@@ -16,21 +16,39 @@
     "type": "git",
     "url": "git+https://github.com/cristianvasquez/obsidian-prettify.git"
   },
+  "dependencies": {
+    "@types/unist": "^2.0.0",
+    "longest-streak": "^2.0.0",
+    "markdown-utils": "^1.0.0",
+    "mdast-util-definitions": "^4.0.0",
+    "mdast-util-to-string": "^1.0.0",
+    "npm": "^6.14.8",
+    "parse-entities": "^2.0.0",
+    "remark-gfm": "^1.0.0",
+    "remark-parse": "^9.0.0",
+    "repeat-string": "^1.0.0",
+    "unified": "^9.2.0",
+    "zwitch": "^1.0.0"
+  },
   "devDependencies": {
     "@rollup/plugin-commonjs": "^15.1.0",
+    "@rollup/plugin-json": "^4.1.0",
     "@rollup/plugin-node-resolve": "^9.0.0",
     "@rollup/plugin-typescript": "^6.0.0",
     "@types/node": "^14.14.2",
+    "jest": "^26.0.1",
+    "mdast-util-to-markdown": "^0.5.3",
     "obsidian": "https://github.com/obsidianmd/obsidian-api/tarball/master",
+    "rehype-parse": "^7.0.1",
+    "rehype-remark": "^8.0.0",
+    "remark-inline-links": "^5.0.0",
+    "remark-stringify": "^9.0.0",
+    "remark-wiki-link": "^1.0.0",
     "rollup": "^2.32.1",
     "rollup-plugin-babel": "^4.4.0",
+    "to-vfile": "^6.1.0",
     "tslib": "^2.0.3",
-    "typescript": "^4.0.3",
-    "jest": "^26.0.1"
-  },
-  "dependencies": {
-    "remarkable": "^2.0.1",
-    "markdown-utils": "^1.0.0"
+    "typescript": "^4.0.3"
   },
   "keywords": [
     "obsidian-md",
