--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "npm": "^6.14.8",
     "parse-entities": "^2.0.0",
     "remark-gfm": "^1.0.0",
+    "remark-images": "^2.0.0",
     "remark-parse": "^9.0.0",
     "repeat-string": "^1.0.0",
     "unified": "^9.2.0",
