--- a/package.json
+++ b/package.json
@@ -24,8 +24,10 @@
     "mdast-util-to-string": "^1.0.0",
     "npm": "^6.14.8",
     "parse-entities": "^2.0.0",
+    "remark-frontmatter": "^3.0.0",
     "remark-gfm": "^1.0.0",
     "remark-images": "^2.0.0",
+    "remark-metadata": "^0.2.1",
     "remark-parse": "^9.0.0",
     "remark-wiki-link": "^1.0.0",
     "repeat-string": "^1.0.0",
