--- a/package.json
+++ b/package.json
@@ -25,9 +25,11 @@
     "moment": "^2.29.1",
     "npm": "^6.14.8",
     "parse-entities": "^2.0.0",
+    "rehype-katex": "^4.0.0",
     "remark-frontmatter": "^3.0.0",
     "remark-gfm": "^1.0.0",
     "remark-images": "^2.0.0",
+    "remark-math": "^4.0.0",
     "remark-metadata": "^0.2.1",
     "remark-parse": "^9.0.0",
     "remark-wiki-link": "^1.0.0",
