--- a/package.json
+++ b/package.json
@@ -21,31 +21,42 @@
     "url": "git+https://github.com/cristianvasquez/obsidian-prettify.git"
   },
   "dependencies": {
+    "@types/mdast": "^3.0.3",
     "@types/unist": "^2.0.0",
     "global": "^4.4.0",
     "js-yaml": "^4.0.0",
+    "mdast-util-wiki-link": "^0.0.1",
+    "micromark-extension-wiki-link": "^0.0.4",
     "moment": "^2.29.1",
-    "rehype-katex": "^4.0.0",
+    "remark": "^13.0.0",
     "remark-frontmatter": "^3.0.0",
     "remark-gfm": "^1.0.0",
     "remark-images": "^2.0.0",
     "remark-math": "^4.0.0",
     "remark-parse": "^9.0.0",
-    "unified": "^9.2.0",
+    "remark-stringify": "^9.0.1",
+    "remark-wiki-link": "^1.0.2",
     "zwitch": "^1.0.5"
   },
   "devDependencies": {
+    "@babel/core": "^7.13.15",
+    "@babel/preset-env": "^7.13.15",
+    "@babel/preset-typescript": "^7.13.0",
     "@rollup/plugin-commonjs": "^15.1.0",
     "@rollup/plugin-json": "^4.1.0",
     "@rollup/plugin-node-resolve": "^9.0.0",
     "@rollup/plugin-typescript": "^6.0.0",
+    "@types/jest": "^26.0.22",
+    "@types/js-yaml": "^4.0.0",
+    "babel-jest": "^26.6.3",
     "jest": "^26.6.3",
     "obsidian": "https://github.com/obsidianmd/obsidian-api/tarball/master",
     "rollup": "^2.32.1",
     "rollup-plugin-babel": "^4.4.0",
     "to-vfile": "^6.1.0",
+    "ts-jest": "^26.5.5",
     "tslib": "^2.0.3",
-    "typescript": "^4.0.3"
+    "typescript": "^4.2.4"
   },
   "keywords": [
     "obsidian-md",
