--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "remark-math": "^4.0.0",
     "remark-parse": "^9.0.0",
     "remark-wiki-link": "^1.0.2",
+    "uuid": "^8.3.2",
     "zwitch": "^1.0.5"
   },
   "devDependencies": {
@@ -47,6 +48,7 @@
     "@rollup/plugin-typescript": "^6.0.0",
     "@types/jest": "^26.0.22",
     "@types/js-yaml": "^4.0.0",
+    "@types/uuid": "^8.3.1",
     "babel-jest": "^26.6.3",
     "jest": "^26.6.3",
     "obsidian": "https://github.com/obsidianmd/obsidian-api/tarball/master",
