Refactor lots of stuff

--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "@types/mdast": "^3.0.3",
     "@types/unist": "^2.0.0",
     "global": "^4.4.0",
-    "js-yaml": "^4.0.0",
+    "gray-matter": "^4.0.3",
+    "js-yaml": "^4.1.0",
     "mdast-util-wiki-link": "^0.0.1",
     "micromark-extension-wiki-link": "^0.0.4",
     "moment": "^2.29.1",
