--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "bugs": {
     "url": "https://github.com/cristianvasquez/obsidian-prettify/issues"
   },
-  "version": "0.1.4",
+  "version": "0.1.3",
   "description": "Prettifies your markdown!",
   "main": "index.js",
   "scripts": {
@@ -28,7 +28,6 @@
     "mdast-util-wiki-link": "^0.0.1",
     "micromark-extension-wiki-link": "^0.0.4",
     "moment": "^2.29.1",
-    "obsidian-community-lib": "^1.4.1",
     "remark": "^13.0.0",
     "remark-frontmatter": "^3.0.0",
     "remark-gfm": "^1.0.0",
@@ -52,7 +51,7 @@
     "@types/uuid": "^8.3.1",
     "babel-jest": "^26.6.3",
     "jest": "^26.6.3",
-    "obsidian": "^0.12.0",
+    "obsidian": "https://github.com/obsidianmd/obsidian-api/tarball/master",
     "rollup": "^2.32.1",
     "rollup-plugin-babel": "^4.4.0",
     "to-vfile": "^6.1.0",
